test_suite/tests/ui/identifier/not_unit.stderr
error: #[serde(other)] must be on a unit variant
 --> tests/ui/identifier/not_unit.rs:7:5
  |
3 |   #[derive(Deserialize)]
  |            ----------- in this derive macro expansion
...
7 | /     #[serde(other)]
8 | |     Other(u8, u8),
  | |_________________^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
